--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "elm-project-inspect",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Elm project inspection",
-  "main": "dist/src/index.js",
+  "main": "dist/index.js",
   "scripts": {
     "prepublish": "npm run build",
     "prebuild": "rimraf 'src/**/*.js' 'src/**/*.map' 'test/**/*.js' 'test/**/*.map' dist",
