--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "elm-project-inspect",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "Elm project inspection",
   "main": "dist/index.js",
   "scripts": {
@@ -28,10 +28,13 @@
     "mocha": "^5.2.0",
     "rimraf": "^2.6.2",
     "source-map-support": "^0.5.9",
-    "typescript": "^3.1.3"
+    "typescript": "^3.1.3",
+    "elm-module-parser": "0.1.10"
+  },
+  "peerDependencies": {
+    "elm-module-parser": "^0.1.10"
   },
   "dependencies": {
-    "elm-module-parser": "^0.1.9",
     "fast-glob": "^2.2.3",
     "lodash": "^4.17.11"
   }
